Changed name of package from osg-reports to gracc-osg-reports and added Docker stuff to the repo

--- a/packaging/Dockerfile
+++ b/packaging/Dockerfile
@@ -5,13 +5,13 @@ RUN apk update \
 	&& apk add build-base \
 	&& apk add postgresql-dev
 
-ADD osg-reports-$version.tar.gz /tmp/osg-reports-$version.tar.gz
-WORKDIR /tmp/osg-reports-$version.tar.gz/osg-reports-$version/
+ADD gracc-osg-reports-$version.tar.gz /tmp/gracc-osg-reports-$version.tar.gz
+WORKDIR /tmp/gracc-osg-reports-$version.tar.gz/gracc-osg-reports-$version/
 
 RUN python setup.py install
 
-RUN mkdir /tmp/html_templates && mkdir /tmp/osg-reports-config
+RUN mkdir /tmp/html_templates && mkdir /tmp/gracc-osg-reports-config
 
-RUN cp /tmp/osg-reports-$version.tar.gz/osg-reports-$version/html_templates/* /tmp/html_templates
+RUN cp /tmp/gracc-osg-reports-$version.tar.gz/gracc-osg-reports-$version/html_templates/* /tmp/html_templates
 
 
