Updating to new gracc reporting

--- a/packaging/Dockerfile
+++ b/packaging/Dockerfile
@@ -1,17 +1,17 @@
-FROM opensciencegrid/gracc-reporting:2.0.1 
+FROM opensciencegrid/gracc-reporting:2.0.2
 ARG version
 
 RUN apk update \
 	&& apk add build-base \
 	&& apk add postgresql-dev
 
-ADD gracc-osg-reports-$version.tar.gz /tmp/gracc-osg-reports-$version.tar.gz
-WORKDIR /tmp/gracc-osg-reports-$version.tar.gz/gracc-osg-reports-$version/
+ADD . /gracc-osg-reports
+WORKDIR /gracc-osg-reports
 
 RUN python setup.py install
 
 RUN mkdir /tmp/html_templates && mkdir /tmp/gracc-osg-reports-config
 
-RUN cp /tmp/gracc-osg-reports-$version.tar.gz/gracc-osg-reports-$version/html_templates/* /tmp/html_templates
+RUN cp /gracc-osg-reports/html_templates/* /tmp/html_templates
 
 
