Adding Pilot vs Payload

--- a/osg.toml
+++ b/osg.toml
@@ -119,3 +119,12 @@ default_logdir = '/var/log'
     index_pattern='gracc.osg.summary'
     to_emails = ['nobody@example.com', ]
     to_names = ['Recipient Name', ]
+
+
+[payloadandpilot]
+    index_pattern='gracc.osg.summary'
+    to_emails = ['nobody@example.com', ]
+    to_names = ['Recipient Name', ]
+    sites = [ 'AMNH', 'Arkansas State University', 'Creighton University', 'Dakota State University', 'SIUE - CC']
+
+
