--- a/osg.toml
+++ b/osg.toml
@@ -125,6 +125,6 @@ default_logdir = '/var/log'
     index_pattern='gracc.osg.summary'
     to_emails = ['nobody@example.com', ]
     to_names = ['Recipient Name', ]
-    sites = [ 'AMNH', 'Arkansas State University', 'Creighton University', 'Dakota State University', 'SIUE - CC']
+    sites_url = "https://raw.githubusercontent.com/opensciencegrid/gracc-osg-reports/master/config/payload-pilot-sites.txt"
 
 
